Blockquote fixes, fix color-shark on dark mode

--- a/sass/features/_dark-mode.scss
+++ b/sass/features/_dark-mode.scss
@@ -154,8 +154,8 @@
   --color-post-author-background-rgb: 18 20 26;
   --color-post-author-border: #69634e;
   --color-midnight-gray: #bbb;
-  --color-shark: #000;
   --color-background-default: var(--color-white-two);
+  --color-shark: #f8f8f8;
 
   // Forms
   --color-background-input-field: #000;
