--- a/sass/gutenberg/blocks/_core-blockquote.scss
+++ b/sass/gutenberg/blocks/_core-blockquote.scss
@@ -5,7 +5,7 @@ blockquote + p > cite {
 }
 
 .wp-block-quote {
-  border-left: 2px solid var(--color-blockquote);
+  border-left: 2px solid var(--color-darkgrey);
   line-height: var(--line-height-paragraphs-blog);
   margin-bottom: 4rem;
   margin-left: auto;
